# Humanoids

./: .gitignore  .gitmodules  README.md  SetupDraft.sh
catkin_ws/src/gait_generation/kick_test/: CMakeLists.txt  package.xml
catkin_ws/src/gait_generation/kick_test/scripts/: get_pose_server.py  kick_server.py  speed_profile_server.py
catkin_ws/src/gait_generation/kick_test/src/: kick_test_node.cpp  ready_to_kick_node.cpp
catkin_ws/src/gait_generation/kick_test/srv/: getPose.srv  kick.srv  speedProfile.srv
catkin_ws/src/gait_generation/tasks/: CMakeLists.txt  package.xml
catkin_ws/src/gait_generation/tasks/src/: kick_and_walk.cpp  walk_and_kick.cpp
catkin_ws/src/gait_generation/tests/: CMakeLists.txt  package.xml
catkin_ws/src/gait_generation/tests/config/: kick_test.yaml  lateral_test.yaml  test_walk.yaml
catkin_ws/src/gait_generation/tests/launch/: generate_goal_traj.launch  test_goal.launch  test_kick.launch  test_lateral_lipm.launch  test_lateral_simple.launch  test_smwalk.launch  test_walk.launch
catkin_ws/src/gait_generation/tests/scripts/: enable_walk.py  goalkeep.py  test_kick.py  test_lateral_lipm.py  test_lateral_simple.py  test_smwalk.py  test_walk.py
catkin_ws/src/gait_generation/tests/src/: left_kick.cpp  prone_get_up.cpp  ready_to_kick.cpp  right_kick.cpp  supine_get_up.cpp  walk.cpp
catkin_ws/src/hardware/camera/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/camera/launch/: record_video.launch
catkin_ws/src/hardware/camera/scripts/: camera_video_publisher.py  record_video_robocup.py
catkin_ws/src/hardware/camera/src/: camera_node.cpp
catkin_ws/src/hardware/imu/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/imu/config/: darwin1_imu_config.yaml  darwin2_imu_config.yaml  mpu_settings.yaml
catkin_ws/src/hardware/imu/include/i2c/: i2c_handler.hpp
catkin_ws/src/hardware/imu/include/mpu6050/: calibration.hpp  mpu6050.hpp  mpu6050_node.hpp  types.hpp
catkin_ws/src/hardware/imu/launch/: mpu6050_calibration.launch  mpu6050_unfiltered.launch
catkin_ws/src/hardware/imu/scripts/: imu_handler_node.py  imu_simul_handler_node.py
catkin_ws/src/hardware/imu/src/i2c/: i2c_handler.cpp
catkin_ws/src/hardware/imu/src/mpu6050/: calibration.cpp  main.cpp  main_calibration.cpp  mpu6050.cpp  mpu6050_node.cpp
catkin_ws/src/humanoid_tools/humanoid/: CMakeLists.txt  package.xml
catkin_ws/src/humanoid_tools/humanoid/include/humanoid/: Humanoid.h
catkin_ws/src/humanoid_tools/humanoid/scripts/: get_predef_poses_server.py  speed_profile_server.py
catkin_ws/src/humanoid_tools/humanoid/src/: Humanoid.cpp
catkin_ws/src/humanoid_tools/humanoid_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/humanoid_tools/humanoid_msgs/srv/: predefPoses.srv
catkin_ws/src/surge_et_ambula/: CMakeLists.txt  package.xml
catkin_ws/src/surge_et_ambula/launch/: ball_detection.launch  humanoid.launch  humanoid_gazebo.launch  humanoid_gazebo_no_control.launch  humanoid_hardware.launch  humanoid_hardware_simul.launch  humanoid_simul.launch  humanoid_soccer.launch  rviz_humanoid.launch  thesis_luis.launch
catkin_ws/src/surge_et_ambula/launch/hardware/: darwin_follow_ball.launch  darwin_hardware.launch  humanoid_follow_ball.launch
catkin_ws/src/surge_et_ambula/launch/simul/: darwin_gazebo_sim.launch  humanoid_follow_ball_sim.launch  humanoid_simul.launch
catkin_ws/src/vision/ball_kinematics/: CMakeLists.txt  package.xml
catkin_ws/src/vision/ball_kinematics/scripts/: catch_ball_positions.py  graph_kalman_estimator.py  graph_positions.py  kalman_data.txt  kalman_processing_node.py  positions_data.txt  velocity_x.py  velocity_x_old.py  velocity_y.py
catkin_ws/src/vision/ball_kinematics/src/: ball_kinematics_node.cpp  ball_viz_node.cpp
catkin_ws/src/vision/ball_position/: CMakeLists.txt  package.xml
catkin_ws/src/vision/ball_position/scripts/: data_simul.py  graph_kalman_estimator.py  graph_kalman_estimator_x.py  graph_kalman_estimator_y.py  kalman_data.txt  kalman_estimator.py  kalman_estimator_data.txt  kalman_processing_node.py
catkin_ws/src/vision/ball_position/src/: ball_position_node.cpp  ball_position_simul.cpp  compres_ball_viz_node.cpp  move_ball_node.cpp
catkin_ws/src/vision/ball_tracker/: CMakeLists.txt  package.xml
catkin_ws/src/vision/ball_tracker/scripts/: ball_pose_estimator.py
catkin_ws/src/vision/ball_tracker/src/: ball_tracker_node.cpp  ball_tracker_simul.cpp
catkin_ws/src/vision/undistort_point_service/: CMakeLists.txt  package.xml  packageInfo.mat
catkin_ws/src/vision/undistort_point_service/src/: ServiceServer.cpp  checkStoppingCriteria.cpp  coder_posix_time.c  computeFiniteDifferences.cpp  driver.cpp  finDiffEvalAndChkErr.cpp  linearLeastSquares.cpp  lsqcurvefit.cpp  main.cpp  pause.cpp  ros_structmsg_conversion.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtw_proj.tmw  undistort_point_service.cpp  undistort_point_service_data.cpp  undistort_point_service_initialize.cpp  undistort_point_service_terminate.cpp  vision_msgs_and_srv_UndistortPointRequestStruct.cpp  vision_msgs_and_srv_UndistortPointResponseStruct.cpp  xgemv.cpp  xnrm2.cpp  xzlarf.cpp  xzlarfg.cpp
catkin_ws/src/vision/vision_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/vision/vision_msgs/msg/: HumanCoordinates.msg  HumanCoordinatesArray.msg  Keypoint.msg  Person.msg  VisionObject.msg  VisionObjects.msg
catkin_ws/src/vision/vision_msgs/srv/: ProcessObject.srv
setup/luckfox/: CMakeLists.txt  README.md
setup/luckfox/configs/: S99staticIP  my_application.service  service-deamon.txt  start_app.sh
setup/luckfox/demos/: build_yolo.sh
setup/luckfox/demos/include/rknn/: postprocess.h
setup/luckfox/demos/install/luckfox_pico_rtsp_yolov5_demo/: luckfox_pico_rtsp_yolov5
setup/luckfox/demos/root@10.42.0.5/: luckfox_pico_rtsp_yolov5
setup/luckfox/demos/src/luckfox_pico_rtsp_yolov5/model/: labels.txt
setup/luckfox/install/luckfox_pico_rtsp_yolov5_demo/: luckfox_pico_rtsp_yolov5
setup/luckfox/src/luckfox_pico_rtsp_yolov5/include/: luckfox_mpi.h
setup/luckfox/src/luckfox_pico_rtsp_yolov5/src/: luckfox_mpi.cc  main.cc  postprocess.cc
(+704 files in other folders)
