<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>undistort_point_service</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="rosuser@test.com">ROS User</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs_and_srv</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs_and_srv</exec_depend>
</package>
<!-- Generated on Thu Dec 07 09:29:46 2023 -->
